# evolve

./: .editorconfig  .gitignore  .golangci.yaml  .goreleaser.yaml  .licenseignore  .markdownlint-cli2.yaml  .prettierignore  .prettierrc.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  Makefile  README.md  go.mod  go.sum  mise.toml  package.json  pyproject.toml  release-please-config.json  tasks.toml  zensical.toml
.github/: dependabot.yaml
.github/workflows/: add-to-project.yaml  auto-merge.yaml  ci.yaml  codeql.yaml  dependabot-merge.yaml  merge-notice.yaml  merge-review-ack.yaml  merge.yaml  release.yaml  security.yaml
cmd/: docs.go  main.go  models.go  report.go  run.go  run_all.go  run_all_test.go  run_cases.go  run_check.go  run_test.go  version.go
cmd/evolve/: docs.go  doctor.go  main.go  models.go  report.go  run.go  run_all.go  run_all_test.go  run_checks.go  run_evals.go  run_test.go  run_triggers.go  runui.go  sandbox.go  staleresults.go  view.go
completions/: evolve.bash  evolve.fish  evolve.zsh
docs/: authoring-evaluations.md  getting-started.md  index.md  installation.md  reference.md  reports.md  tui.md
docs/cli/: evolve.md  evolve_completion.md  evolve_completion_bash.md  evolve_doctor.md  (+14 more)
e2e/: go.mod  report_check_test.go  smoke_test.go
overrides/: home.html  main.html
schemas/: benchmark.schema.json  common.schema.json  evals.schema.json  evaluation.schema.json  grading.schema.json  history.schema.json  metrics.schema.json  results.schema.json  schemas.go  schemas_test.go  timing.schema.json  triggers.schema.json
tools/: go.mod  go.sum
(+290 files in other folders)
