# Copyright 2026 Bitwise Media Group Ltd
# SPDX-License-Identifier: MIT

[project]
name = "evolve"
version = "0.2.1"
description = "A CLI tool for evaluating coding-agent plugins with a multi-tier approach."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "BitWise Media Group Ltd.", email = "oss@bitwisemedia.uk" }]
dependencies = [
  "zensical>=0.0.50",
]
